<resources>
    <string name="app_name">Movie Catalogue UIUX</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_movies">Movies</string>
    <string name="tab_tvshow">TV Shows</string>
    <string name="image_poster">Poster</string>
    <string name="release">Release Date :</string>
    <string name="tvrelease">Release</string>
    <string name="rating">Rating :</string>
    <string name="tvrating">Rating</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="localization">Change Language Settings</string>

    <!--Movie Array-->
    <string-array name="movie_title">
        <item>A Star is Born</item>
        <item>Aquaman</item>
        <item>Avenger: Invinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>
        <item>Glass</item>
        <item>How To Train Your Dragon: The Hidden World</item>
        <item>Mortal Engine</item>
        <item>Robin Hood</item>
        <item>Spiderman</item>
    </string-array>
    <integer-array name="movie_poster">
        <item>@drawable/poster_a_start_is_born</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_infinity_war</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_how_to_train</item>
        <item>@drawable/poster_mortal_engines</item>
        <item>@drawable/poster_robin_hood</item>
        <item>@drawable/poster_spiderman</item>
    </integer-array>
    <string-array name="movie_releasedate">
        <item>October 5, 2018</item>
        <item>December 21, 2018</item>
        <item>April 27, 2018</item>
        <item>November 2, 2018</item>
        <item>November 21, 2018</item>
        <item>January 3, 2019</item>
        <item>January 16, 2019</item>
        <item>November 27, 2018</item>
        <item>November 21, 2018</item>
        <item>December 6, 2018</item>
    </string-array>
    <string-array name="movie_rating">
        <item>75</item>
        <item>68</item>
        <item>83</item>
        <item>80</item>
        <item>67</item>
        <item>77</item>
        <item>66</item>
        <item>61</item>
        <item>58</item>
        <item>84</item>
    </string-array>
    <string-array name="movie_overview">
        <item>"Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons."</item>
        <item>"Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm's half-human, half-Atlantean brother and true heir to the throne."</item>
        <item>"As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain."</item>
        <item>"Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock 'n' roll band Queen in 1970. Hit songs become instant classics. When Mercury's increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess."</item>
        <item>"Between personal obligations and training for his next big fight against an opponent with ties to his family's past, Adonis Creed is up against the challenge of his life."</item>
        <item>"As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind."</item>
        <item>"In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men."</item>
        <item>"Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever."</item>
        <item>"A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown."</item>
        <item>"Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson Kingpin Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension."</item>
    </string-array>

    <!--TvShow Array-->
    <string-array name="tvshow_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Iron Fist</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpson</item>
    </string-array>
    <integer-array name="tvshow_poster">
        <item>@drawable/tvshow_arrow</item>
        <item>@drawable/tvshow_doom_patrol</item>
        <item>@drawable/tvshow_family_guy</item>
        <item>@drawable/tvshow_flash</item>
        <item>@drawable/tvshow_gotham</item>
        <item>@drawable/tvshow_grey_anatomy</item>
        <item>@drawable/tvshow_iron_fist</item>
        <item>@drawable/tvshow_supergirl</item>
        <item>@drawable/tvshow_supernatural</item>
        <item>@drawable/tvshow_the_simpson</item>
    </integer-array>
    <string-array name="tvshow_releasedate">
        <item>October 10, 2012</item>
        <item>February 15, 2019</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>September 22, 2014</item>
        <item>March 27, 2005</item>
        <item>March 17, 2017</item>
        <item>October 26, 2015</item>
        <item>September 13, 2005</item>
        <item>December 17, 1989</item>
    </string-array>
    <string-array name="tvshow_rating">
        <item>58</item>
        <item>65</item>
        <item>65</item>
        <item>67</item>
        <item>69</item>
        <item>64</item>
        <item>61</item>
        <item>59</item>
        <item>74</item>
        <item>72</item>
    </string-array>
    <string-array name="tvshow_overview">
        <item>"Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow."</item>
        <item>"The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find."</item>
        <item>"Sick, twisted, politically incorrect and Freakin' Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he's not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues."</item>
        <item>"After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion -- and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won't be long before the world learns what Barry Allen has become...The Flash."</item>
        <item>"Before there was Batman, there was GOTHAM. Everyone knows the name Commissioner Gordon. He is one of the crime world's greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon's story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world's most iconic villains? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker?"</item>
        <item>"Follows the personal and professional lives of a group of doctors at Seattle’s Grey Sloan Memorial Hospital."</item>
        <item>"Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny."</item>
        <item>"Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism."</item>
        <item>"When they were boys, Sam and Dean Winchester lost their mother to a mysterious and demonic supernatural force. Subsequently, their father raised them to be soldiers. He taught them about the paranormal evil that lives in the dark corners and on the back roads of America ... and he taught them how to kill it. Now, the Winchester brothers crisscross the country in their '67 Chevy Impala, battling every kind of supernatural threat they encounter along the way."</item>
        <item>"Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general."</item>
    </string-array>
</resources>
